# dia

./: .gitignore  API.md  Cargo.toml  GUIDE.md  README.md  build.zig  build.zig.zon  task.md
.github/workflows/: ci.yml
dia-core/: Cargo.toml
dia-core/src/: application.rs  controller.rs  ffi.rs  lib.rs  middleware.rs  request.rs  response.rs
dia-macros/: Cargo.toml
dia-macros/src/: lib.rs
examples/: hello_world.zig  rest_api.zig  simple_server.rs  std_like_usage.zig  test_connection.zig
src/: controller.zig  dia.zig  middleware.zig  request.zig  response.zig
