[workspace]
members = [
    "dia-core",
    "dia-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["dia-team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dia-team/dia"
description = "A cross-platform backend framework for Zig, powered by Rust and actix-web"
keywords = ["zig", "web", "framework", "cross-platform", "actix"]
categories = ["web-programming::http-server", "api-bindings"]

[workspace.dependencies]
# 核心 web 框架
actix-web = "4.0"
actix-rt = "2.0"

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步支持
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 日志支持
log = "0.4"
env_logger = "0.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# FFI 支持
libc = "0.2"

# 宏开发工具
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true