[package]
name = "dia-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for dia framework"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macro tools
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
default = []